# drake

./: .gitignore  mydiff.patch  read_log.py  sample-log.00
examples/multibody/comparison/: BUILD.bazel  stack_boxes.cc  test_momentum.cc
examples/multibody/try_differential_inverse_kinematics/: BUILD.bazel  checker.mtl  dual_arm.cc  fluid.cc  only_gravity.cc  roll.cc  roll_new.cc  rolling_pin.sdf  skewed_cup.cc  try.cc  try_new_gripper.cc
examples/try_robot/: allegro_hand.sdf  allegro_hand_capsules.sdf  iiwa7_no_collision.sdf  try_robot.py
geometry/: BUILD.bazel  drake_visualizer.cc  drake_visualizer.h  geometry_instance.h  meshcat.h  meshcat_point_cloud_visualizer.cc  meshcat_point_cloud_visualizer.h  proximity_engine.cc  query_object.h  scene_graph.cc  scene_graph.h
geometry/query_results/: BUILD.bazel  mpm_contact.cc  mpm_contact.h  mpm_particle_contact_pair.h
geometry/test/: meshcat_manual_test.cc
multibody/fem/: BUILD.bazel
multibody/fem/doc/: stiffness_matrix.aux
multibody/mpm/: AnalyticLevelSet.cc  AnalyticLevelSet.h  BSpline.cc  BSpline.h  BUILD.bazel  CollisionObject.cc  CollisionObject.h  CorotatedElasticModel.cc  CorotatedElasticModel.h  ElasticEnergyDerivatives.md  ElastoPlasticModel.cc  ElastoPlasticModel.h  GravitationalForce.cc  GravitationalForceDenseGrid.h  Grid.cc  Grid.h  KinematicCollisionObjects.cc  KinematicCollisionObjects.h  MPMDriver.cc  MPMDriver.h  MPMParameters.h  MPMRunTimeStatistics.h  MPMTransfer.cc  MPMTransfer.h  MathUtils.cc  MathUtils.h  Particles.cc  Particles.h  SparseGrid.cc  SparseGrid.h  SpatialVelocityTimeDependent.cc  SpatialVelocityTimeDependent.h  StvkHenckyWithVonMisesModel.cc  StvkHenckyWithVonMisesModel.h  TotalMassEnergyMomentum.h  Utils.h  VelocityJacobianDerivative.md  conjugate_gradient.h  derivative_test.md  dummy_main.cc  (+29 more)
multibody/mpm/constitutive_model/: BUILD.bazel  StvkHenckyWithVonMisesModel.cc  StvkHenckyWithVonMisesModel.h  StvkHenckyWithVonMisesModel2.cc  StvkHenckyWithVonMisesModel2.h  StvkHencky_with_vonMises_model.md  corotated_elastic_model.cc  corotated_elastic_model.h  elastoplastic_model.cc  elastoplastic_model.h  equation_of_state.h  linear_corotated_model.h  linear_corotated_with_plasticity.h  stvk_hencky_with_von_mises_model.cc  stvk_hencky_with_von_mises_model.h
multibody/mpm/constitutive_model/doc/: derivatives_of_stvkhencky_w_vonMises_model.md
multibody/mpm/constitutive_model/test/: corotated_elastic_model_test.cc  linear_corotated_model_test.cc  stvk_hencky_with_von_mises_model_test.cc  stvk_with_vm_model_test.cc
multibody/mpm/deprecated/: GravitationalForce.cc  GravitationalForce.h  GravitationalForceDenseGrid.cc  Grid.h
multibody/mpm/deprecated/examples/ball/: main.cpp
multibody/mpm/deprecated/examples/ball/outputs/: mpm-test1.bgeo  mpm-test10.bgeo  mpm-test12.bgeo  mpm-test15.bgeo  mpm-test16.bgeo  mpm-test20.bgeo  mpm-test21.bgeo  mpm-test22.bgeo  mpm-test24.bgeo  mpm-test28.bgeo  mpm-test29.bgeo  mpm-test32.bgeo  mpm-test36.bgeo  mpm-test37.bgeo  mpm-test38.bgeo  mpm-test39.bgeo  mpm-test4.bgeo  mpm-test41.bgeo  mpm-test43.bgeo  mpm-test44.bgeo  mpm-test45.bgeo  mpm-test47.bgeo  mpm-test49.bgeo  mpm-test5.bgeo  mpm-test6.bgeo  mpm-test7.bgeo  mpm-test9.bgeo
multibody/mpm/deprecated/examples/pingpong/outputs/: mpm-test1.bgeo  mpm-test11.bgeo  mpm-test12.bgeo  mpm-test13.bgeo  mpm-test15.bgeo  mpm-test18.bgeo  mpm-test19.bgeo  mpm-test2.bgeo  mpm-test21.bgeo  mpm-test23.bgeo  mpm-test25.bgeo  mpm-test28.bgeo  mpm-test29.bgeo  mpm-test32.bgeo  mpm-test35.bgeo  mpm-test37.bgeo  mpm-test38.bgeo  mpm-test4.bgeo  mpm-test41.bgeo  mpm-test44.bgeo  mpm-test45.bgeo  mpm-test47.bgeo  mpm-test8.bgeo
multibody/mpm/doc/: energy_derivatives.md  relative_tol.md
multibody/mpm/examples/ball/: main.cpp
multibody/mpm/examples/ball/outputs/: mpm-test0.bgeo  mpm-test1.bgeo  mpm-test10.bgeo  mpm-test11.bgeo  mpm-test12.bgeo  mpm-test13.bgeo  mpm-test14.bgeo  mpm-test17.bgeo  mpm-test18.bgeo  mpm-test19.bgeo  mpm-test2.bgeo  mpm-test23.bgeo  mpm-test25.bgeo  mpm-test26.bgeo  mpm-test27.bgeo  mpm-test3.bgeo  mpm-test30.bgeo  mpm-test31.bgeo  mpm-test33.bgeo  mpm-test34.bgeo  mpm-test35.bgeo  mpm-test4.bgeo  mpm-test40.bgeo  mpm-test42.bgeo  mpm-test46.bgeo  mpm-test48.bgeo  mpm-test5.bgeo  mpm-test50.bgeo  mpm-test6.bgeo  mpm-test7.bgeo  mpm-test8.bgeo  mpm-test9.bgeo
multibody/mpm/examples/ball_on_floor/: main.cpp
multibody/mpm/examples/helloworld/: main.cpp
multibody/mpm/examples/pingpong/: main.cpp
multibody/mpm/examples/pingpong/outputs/: mpm-test0.bgeo  mpm-test10.bgeo  mpm-test14.bgeo  mpm-test16.bgeo  mpm-test17.bgeo  mpm-test20.bgeo  mpm-test22.bgeo  mpm-test24.bgeo  mpm-test26.bgeo  mpm-test27.bgeo  mpm-test3.bgeo  mpm-test30.bgeo  mpm-test31.bgeo  mpm-test33.bgeo  mpm-test34.bgeo  mpm-test36.bgeo  mpm-test39.bgeo  mpm-test40.bgeo  mpm-test42.bgeo  mpm-test43.bgeo  mpm-test46.bgeo  mpm-test5.bgeo  mpm-test6.bgeo  mpm-test7.bgeo  mpm-test9.bgeo
multibody/mpm/internal/: BUILD.bazel  analytic_level_set.cc  analytic_level_set.h  b_spline.cc  b_spline.h  hashing_utils.h  mass_and_momentum.h  math_utils.h  math_utils.md  poisson_disk.cc  poisson_disk.h  total_mass_momentum.h
multibody/mpm/internal/test/: analytic_level_set_test.cc  b_spline_test.cc  corotated_elastic_model_test.cc  math_utils_test.cc  poisson_disk_test.cc
multibody/mpm/test/: AnalyticLevelSet_test.cc  BSpline_test.cc  CollisionObject_test.cc  Dummy_derivative_test.cc  ElastoPlasticModel_test.cc  GravitationalForce_test.cc  Grid_test.cc  MPMTransfer_test.cc  MathUtils_test.cc  Particles_test.cc  TestEnergyForceHessian.cc  TestMpmContactPair.cc  TestMpmContactPairExternalParticles.cc  TestMpmContactPairExternalParticlesWithTransform.cc  equation_of_state_test.cc  linear_solver_test.cc  mpm_driver_test.cc  mpm_model_test.cc  mpm_transfer_test.cc  particles_test.cc  reorder_speed_test.cc  reorder_speed_test2.cc  sparse_grid_and_particles_test.cc  sparse_grid_test.cc
tools/workspace/poisson_disk_sampling_internal/: package.BUILD.bazel  repository.bzl
tutorials/: hydroelastic_contact_basics.ipynb
(+40 files in other folders)
