#- * - python - * -
load("//tools/lint:lint.bzl", "add_lint_tests")
load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "mpm",
    visibility = ["//visibility:public"],
    deps = [
        ":g2p",
    ],
)

drake_cc_library(
    name = "g2p",
    srcs = [
        "g2p.cc",
    ],
    hdrs = [
        "g2p.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "g2p_test",
    deps = [
        ":g2p",
    ],
)

add_lint_tests()
