# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "pad",
    hdrs = [
        "pad.h",
    ],
    deps = [
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "interpolation_weights",
    hdrs = [
        "interpolation_weights.h",
    ],
    deps = [
        ":pad",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/internal:b_spline",
        "//multibody/mpm/internal:math_utils",
    ],
)

drake_cc_library(
    name = "particles",
    srcs = [
        "particles.cc",
    ],
    hdrs = [
        "particles.h",
    ],
    deps = [
        ":interpolation_weights",
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "particles_test",
    deps = [
        ":particles",
    ],
)

drake_cc_library(
    name = "grid_data",
    hdrs = [
        "grid_data.h",
    ],
    deps = [
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "mpm_transfer",
    srcs = [
        "mpm_transfer.cc",
    ],
    hdrs = [
        "mpm_transfer.h",
    ],
    deps = [
        ":grid_data",
        "//common:essential",
    ],
)

add_lint_tests()
