# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "pad",
    hdrs = [
        "pad.h",
    ],
    deps = [
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "interpolation_weights",
    hdrs = [
        "interpolation_weights.h",
    ],
    deps = [
        ":pad",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/internal:b_spline",
        "//multibody/mpm/internal:math_utils",
    ],
)

drake_cc_library(
    name = "particles",
    srcs = [
        "particles.cc",
    ],
    hdrs = [
        "particles.h",
    ],
    deps = [
        ":interpolation_weights",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/internal:mass_and_momentum",
    ],
)

drake_cc_googletest(
    name = "particles_test",
    deps = [
        ":particles",
    ],
)

drake_cc_library(
    name = "grid_data",
    hdrs = [
        "grid_data.h",
    ],
    deps = [
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "sparse_grid",
    srcs = [
        "sparse_grid.cc",
    ],
    hdrs = [
        "sparse_grid.h",
    ],
    deps = [
        ":grid_data",
        ":pad",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/internal:hashing_utils",
        "//multibody/mpm/internal:mass_and_momentum",
        "//multibody/mpm/internal:math_utils",
    ],
)

drake_cc_googletest(
    name = "sparse_grid_test",
    deps = [
        ":sparse_grid",
    ],
)

drake_cc_library(
    name = "mpm_transfer",
    srcs = [
        "mpm_transfer.cc",
    ],
    hdrs = [
        "mpm_transfer.h",
    ],
    deps = [
        ":grid_data",
        ":pad",
        ":particles",
        ":sparse_grid",
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "mpm_transfer_test",
    deps = [
        ":mpm_transfer",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()
