# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "pad",
    hdrs = [
        "pad.h",
    ],
    deps = [
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "interpolation_weights",
    hdrs = [
        "interpolation_weights.h",
    ],
    deps = [
        ":pad",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/internal:b_spline",
        "//multibody/mpm/internal:math_utils",
    ],
)

drake_cc_library(
    name = "particles_data",
    hdrs = [
        "particles_data.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "particles",
    srcs = [
        "particles.cc",
    ],
    hdrs = [
        "particles.h",
    ],
    deps = [
        ":interpolation_weights",
        ":particles_data",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/constitutive_model:elastoplastic_model",
        "//multibody/mpm/internal:mass_and_momentum",
    ],
)

drake_cc_googletest(
    name = "particles_test",
    deps = [
        ":particles",
        "//multibody/mpm/constitutive_model:corotated_elastic_model",
    ],
)

drake_cc_library(
    name = "grid_data",
    hdrs = [
        "grid_data.h",
    ],
    deps = [
        "//common:autodiff",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "sparse_grid",
    srcs = [
        "sparse_grid.cc",
    ],
    hdrs = [
        "sparse_grid.h",
    ],
    deps = [
        ":grid_data",
        ":pad",
        "//common:autodiff",
        "//common:essential",
        "//multibody/mpm/internal:hashing_utils",
        "//multibody/mpm/internal:mass_and_momentum",
        "//multibody/mpm/internal:math_utils",
    ],
)

drake_cc_googletest(
    name = "sparse_grid_test",
    deps = [
        ":sparse_grid",
    ],
)

drake_cc_library(
    name = "mpm_transfer",
    srcs = [
        "mpm_transfer.cc",
    ],
    hdrs = [
        "mpm_transfer.h",
    ],
    deps = [
        ":grid_data",
        ":pad",
        ":particles",
        ":particles_data",
        ":sparse_grid",
        "//common:essential",
        "//multibody/mpm/constitutive_model:corotated_elastic_model",
    ],
)

drake_cc_googletest(
    name = "mpm_transfer_test",
    deps = [
        ":mpm_transfer",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_library(
    name = "mpm_model",
    srcs = [
        "mpm_model.cc",
    ],
    hdrs = [
        "mpm_model.h",
    ],
    deps = [
        ":mpm_transfer",
    ],
)

drake_cc_googletest(
    name = "mpm_model_test",
    deps = [
        ":mpm_model",
        "//common/test_utilities:eigen_matrix_compare",
        "//math:gradient",
    ],
)

drake_cc_library(
    name = "matrix_replacement",
    hdrs = [
        "matrix_replacement.h",
    ],
    deps = [
        ":mpm_model",
    ],
)

drake_cc_googletest(
    name = "linear_solver_test",
    deps = [
        ":matrix_replacement",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_library(
    name = "particles_to_bgeo",
    hdrs = [
        "particles_to_bgeo.h",
    ],
    deps = [
        "//common:essential",
        "@partio",
    ],
)

drake_cc_library(
    name = "mpm_driver",
    hdrs = [
        "mpm_driver.h",
    ],
    deps = [
        ":matrix_replacement",
        ":particles_to_bgeo",
        "//multibody/mpm/internal:analytic_level_set",
        "//multibody/mpm/internal:poisson_disk",
    ],
)

drake_cc_googletest(
    name = "mpm_driver_test",
    deps = [
        ":mpm_driver",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()
