load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "stack_boxes",
    srcs = [
        "stack_boxes.cc",
    ],
    add_test_rule = 1,
    data = [
    ],
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry",
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
        "//multibody/mpm/constitutive_model:linear_corotated_model",
        "//multibody/mpm/constitutive_model:linear_corotated_with_plasticity",
        "//multibody/mpm/constitutive_model:corotated_elastic_model",
        "//multibody/mpm/constitutive_model:stvk_hencky_with_von_mises_model",
    ],
)

drake_cc_binary(
    name = "test_momentum",
    srcs = [
        "test_momentum.cc",
    ],
    add_test_rule = 1,
    data = [
    ],
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry",
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
        "//multibody/mpm/constitutive_model:linear_corotated_model",
        "//multibody/mpm/constitutive_model:linear_corotated_with_plasticity",
        "//multibody/mpm/constitutive_model:corotated_elastic_model",
        "//multibody/mpm/constitutive_model:stvk_hencky_with_von_mises_model",
    ],
)


add_lint_tests()
