load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "try",
    srcs = [
        "try.cc",
    ],
    add_test_rule = 1,
    data = [
        "//manipulation/models/iiwa_description:models",
    ],
    test_rule_args = [
        "-simulation_time=0.1",
        "-realtime_rate=0.0",
    ],
    deps = [
        "//geometry:drake_visualizer",
        "//geometry:scene_graph",
        "//multibody/parsing",
        "//multibody/plant",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "@gflags",
        "//multibody/mpm/constitutive_model:linear_corotated_model",
        "//multibody/mpm/constitutive_model:corotated_elastic_model",
        "//manipulation/kuka_iiwa:iiwa_constants",
        "//multibody/inverse_kinematics:differential_inverse_kinematics",
        "//multibody/inverse_kinematics:differential_inverse_kinematics_integrator",
        "//systems/primitives:multiplexer",
        "//systems/primitives:constant_vector_source",
    ],
)

add_lint_tests(enable_clang_format_lint = False)
