# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "elastoplastic_model",
    srcs = [
        "elastoplastic_model.cc",
    ],
    hdrs = [
        "elastoplastic_model.h",
    ],
    deps = [
        "//common:essential",
        "//multibody/fem:matrix_utilities",
        "//multibody/mpm/internal:math_utils",
    ],
)

drake_cc_library(
    name = "corotated_elastic_model",
    srcs = [
        "corotated_elastic_model.cc",
    ],
    hdrs = [
        "corotated_elastic_model.h",
    ],
    deps = [
        ":elastoplastic_model",
    ],
)

drake_cc_googletest(
    name = "corotated_elastic_model_test",
    deps = [
        ":corotated_elastic_model",
        "//common:autodiff",
        "//common/test_utilities:eigen_matrix_compare",
        "//math:geometric_transform",
        "//math:gradient",
    ],
)

drake_cc_library(
    name = "stvk_hencky_with_von_mises_model",
    srcs = [
        "stvk_hencky_with_von_mises_model.cc",
    ],
    hdrs = [
        "stvk_hencky_with_von_mises_model.h",
    ],
    deps = [
        ":elastoplastic_model",
    ],
)

drake_cc_googletest(
    name = "stvk_hencky_with_von_mises_model_test",
    deps = [
        ":stvk_hencky_with_von_mises_model",
        "//common:autodiff",
        "//common/test_utilities:eigen_matrix_compare",
        "//math:geometric_transform",
        "//math:gradient",
    ],
)

add_lint_tests()
