# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
)
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "math_utils",
    hdrs = [
        "math_utils.h",
    ],
    deps = [
        "//common:essential",
        "//common:autodiff",
    ],
)
drake_cc_googletest(
    name = "math_utils_test",
    deps = [
        ":math_utils",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)


add_lint_tests()
